--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -1,3 +1,4 @@
+@import '../_media-queries.scss';
 .content {
   margin-top: 10px;
   justify-content: center;
@@ -7,6 +8,9 @@
   &--emailAndPassword,
   &--emailVerification {
     flex-direction: row-reverse;
+    @include breakpoint("mobile"){
+        display: block;
+      }
   }
 
   .loginOptionsContainer,
@@ -15,26 +19,41 @@
   }
 
   .loginOptionsContainer {
-    border-right: 0;
-    border-left: 1px solid #ddd;
-    min-height: 274px;
-    margin-top: 30px;
-    
+    min-height: 240px !important;
+    max-width: 427px;
+    border-radius: 4px;
+    background-color: #F4F7FA;
+    // @include breakpoint("mobile"){
+    //     width: ;
+    //   }
     .optionsSticky {
         .formTitle {
-            text-align: left;
-            padding: 0;
-            margin: 0 0 32px;
-            font-style: normal;
-            font-weight: 300;
-            font-size: 0;
-            line-height: 100%;
+            // text-align: left;
+            // padding: 0;
+            // margin: 0 0 32px;
+            // font-style: normal;
+            // font-weight: 300;
+            // font-size: 0;
+            // line-height: 100%;
+            // align-items: center;
+            // color: #111;
+            display: flex;
             align-items: center;
-            color: #111;
-
+            justify-content: center;
+            @include breakpoint("mobile"){
+                transform: translateX(-50px);
+            }
             &::after {
                 content: "Non hai ancora un account?";
-                font-size: 18px !important;
+                    height: 24px;
+                    width: 250px;
+                    color: #332C32;
+                    font-family: Roboto;
+                    font-size: 20px;
+                    font-weight: 500;
+                    letter-spacing: 0;
+                    line-height: 24px;
+                  
             }
         }
 
@@ -59,15 +78,24 @@
 
                 .emailPasswordOptionBtn,
                 .accessCodeOptionBtn {
-                    :global(.vtex-button) {
-                        background: #8E8E8E;
-                        color: #fff;
-                        border: 2px solid #8E8E8E;
 
-                        &:hover {
-                            background: #1B0E41;
-                            border: 2px solid #1B0E41;
-                        }
+                    &::after{
+                         content: "Maecenas efficitur feugiat orci, sit amet ullamcorper leo. Sed sit amet felis id ex ornare dignissim faucibus sed mi.";
+                         height: 60px;
+                         width: 360px;
+                         color: #332C32;
+                         font-family: Roboto;
+                         font-size: 16px;
+                         letter-spacing: 0;
+                         line-height: 20px;
+                         position: absolute;
+                         transform: translateY(-8px);
+                         @include breakpoint("mobile"){
+                            transform: translateX(-232px);
+                         }
+                    }
+                    :global(.vtex-button) {
+                        display: none;
                     }
                 }
             }
@@ -145,9 +173,9 @@
 
               :global(.vtex-styleguide-9-x-input) {
                   background: #FFF;
-                  border: 2px solid #CCC;
+                  border: 1px solid #CCC;
                   box-sizing: border-box;
-                  border-radius: 8px;
+                  border-radius: 3px;
                   width: 280px;
                   height: 48px;
               }
@@ -180,7 +208,8 @@
               min-width: 131px;
 
               :global(.vtex-button) {
-                  background: #8E8E8E;
+                border-radius: 2px;
+                background-color: #291660;
                   border: none;
                   width: 100%;
                   height: 48px;
@@ -218,7 +247,53 @@
 
       .dontHaveAccount {
         font-size: 18px;
+        color: white;
+        background: antiquewhite;
+        padding: 18px;
+        position: absolute;
+        top: 170px;
+        right: 294px;
+        box-sizing: border-box;
+        height: 40px;
+        width: 360px;
+        border: 1.5px solid #291660;
+        border-radius: 2px;
+        background-color: #FFFFFF;
+
+        &::after{
+            content: "registrati";
+                height: 16px;
+                width: 78px;
+                color: #291660;
+                font-family: Roboto;
+                font-size: 14px;
+                font-weight: 500;
+                letter-spacing: 0;
+                line-height: 16px;
+                text-align: center;
+                position: absolute;
+                bottom: 10px;
+                left: 144px;
+                text-transform: uppercase;
+
+                @include breakpoint("mobile"){
+                    transform: translateX(-48px);
+                }
+        }
+        &:hover{
+            background-color: white;
+            opacity: inherit !important;
+            border: 1.5px solid #1B0E41;
+            border-radius: 2px;
+            background-color: #FFFFFF;
+           
+        }
+        @include breakpoint("mobile"){
+            width: 292px;
+            transform: translateX(260px);
+          }
       }
+
   }
 
 
@@ -369,3 +444,35 @@
 .arrowUp {
   margin-right: 1.5rem;
 }
+
+//login account 
+
+// .formLinkContainer{
+//     position: absolute;
+//     top: 10px;
+//     right: 246px;
+//     width: 427px;
+//     height: 240px;
+//     background: #F4F7FA;
+
+//     .dontHaveAccount{
+//         width: 240px;
+//         color: white;
+//         height: 40px;
+//         margin-top: 169px;
+//         background: white;
+//         &::after{
+//            content: "registrati";
+//            text-transform: uppercase;
+//            color: #291660;
+//            font-family: Roboto;
+//            font-size: 14px;
+//            font-weight: 500;
+//            letter-spacing: 0;
+//            line-height: 16px;
+//            text-align: center;
+//            position: absolute;
+//            transform: translatey(-5px);
+//         }
+//     }
+// }
